fix: stop flickering of bottomNav when changing page

--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,8 @@ body,
 
   padding: 4px 0px;
   display: grid;
-  grid-column-gap: 4px 4px 4px 4px;
-  grid-template-columns: auto auto auto auto;
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
 }
 
 .bottomNav .fui-Button__icon {
